--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
   <groupId>org.springframework.samples</groupId>
   <artifactId>spring-petclinic</artifactId>
   <version>2.3.0.BUILD-SNAPSHOT</version>
-
+    <!-- packaging-->
+    <!--<packaging></packaging>-->
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
